GW: added script and styling for landing page breadcrumb with no hero

--- a/source/themes/custom/gearwrench/styles/libraries/region/header.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/region/header.scss
@@ -1211,6 +1211,16 @@ $mobile-menu-item-button-height: 7rem;
     padding-top: $header-height;
   }
 
+  body.page-node-type-landing-page.landing-page-no-hero & {
+    @include media('>=lg') {
+      padding-top: $header-height;
+    }
+
+    @include media('>=lg-plus') {
+      padding-top: $header-height-large;
+    }
+  }
+
   .breadcrumb {
     padding-top: 1rem;
   }
