--- a/source/themes/custom/crescenttool/styles/libraries/view/search.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/view/search.scss
@@ -184,11 +184,14 @@
 
   // Section title with Performance Device
   .node--type-product-related-products__nav-wrapper {
-    @include container-full-width();
     @include flex();
     @include flex-x(flex-direction, row);
     height: $header-height;
     margin-bottom: 2.5rem;
+
+    @include media('>lg-plus') {
+      @include container-full-width();
+    }
 
     .node--type-product-related-products__nav-logo-wrapper {
       display: none;
@@ -258,6 +261,7 @@
       h4 {
         text-transform: uppercase;
         color: $primary-red;
+        text-align: left;
 
         @include media('>lg-plus') {
           color: $black;
@@ -326,5 +330,29 @@
         }
       }
     }
+  }
+}
+
+@include media('>lg-plus') {
+  .region-post-content {
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+    margin-top: 5rem;
+    max-width: 100%;
+    padding-bottom: 3.75rem;
+    width: 100%;
+    background-color: $primary-red;
+    position: relative;
+
+    .view-empty {
+      max-width: 75em;
+      width: calc(100% - 2rem);
+      margin-left: auto !important;
+      margin-right: auto !important;
+    }
+  }
+
+  .region-footer {
+    margin-top: 0 !important;
   }
 }
