--- a/source/themes/custom/crescenttool/styles/libraries/node/search-index.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/node/search-index.scss
@@ -172,7 +172,6 @@
     }
 
     .node__read-more-button {
-
       @include btn(secondary);
 
       border-radius: 0;
@@ -183,9 +182,10 @@
       font-size: 1rem !important;
       padding: 0 0 1rem 1.625rem;
       transition: $transition-base;
-      width: unset;
+      width: 100%;
       white-space: normal;
       min-width: unset;
+      text-align: left;
 
       @include media('<md') {
         font-size: rem(13px) !important;
