--- a/source/themes/custom/crescenttool_au/styles/libraries/node/search-index.scss
+++ b/source/themes/custom/crescenttool_au/styles/libraries/node/search-index.scss
@@ -182,7 +182,7 @@
       font-size: 1rem !important;
       padding: 0 0 1rem 1.625rem;
       transition: $transition-base;
-      width: 100%;
+      width: unset;
       white-space: normal;
       min-width: unset;
       text-align: left;
