--- a/source/themes/custom/crescenttool_au/styles/libraries/view/search.scss
+++ b/source/themes/custom/crescenttool_au/styles/libraries/view/search.scss
@@ -260,7 +260,7 @@
 
       h4 {
         text-transform: uppercase;
-        color: $primary-red;
+        color: $white;
         text-align: left;
 
         @include media('>lg-plus') {
@@ -333,26 +333,24 @@
   }
 }
 
-@include media('>lg-plus') {
-  .region-post-content {
-    margin-left: 0 !important;
-    margin-right: 0 !important;
-    margin-top: 5rem;
-    max-width: 100%;
-    padding-bottom: 3.75rem;
-    width: 100%;
-    background-color: $primary-red;
-    position: relative;
+.region-post-content {
+  background-color: $primary-red;
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+  margin-top: 5rem;
+  max-width: 100%;
+  padding-bottom: 3.75rem;
+  width: 100%;
+  position: relative;
 
-    .view-empty {
-      max-width: 75em;
-      width: calc(100% - 2rem);
-      margin-left: auto !important;
-      margin-right: auto !important;
-    }
+  .view-empty {
+    max-width: 75em;
+    width: calc(100% - 2rem);
+    margin-left: auto !important;
+    margin-right: auto !important;
   }
+}
 
-  .region-footer {
-    margin-top: 0 !important;
-  }
+.region-footer {
+  margin-top: 0 !important;
 }
