--- a/docroot/themes/custom/sata/templates/node/node--product--full.html.twig
+++ b/docroot/themes/custom/sata/templates/node/node--product--full.html.twig
@@ -159,6 +159,10 @@
         </header>
         <div class="product-detail-content-container__utility-container"></div>
 
+        <div class="product-body">
+          {{ content.body }}
+        </div>
+
         <h3>Features</h3>
 
         {{ page_top_products_features }}
@@ -246,7 +250,7 @@
         </div>
       </div>
 
-      {{ content|without('field_long_description','field_product_images', 'field_product_features', 'field_product_specifications', 'field_set_components') }}
+      {{ content|without('field_long_description','field_product_images', 'field_product_features', 'field_product_specifications', 'field_set_components', 'body') }}
 
       {% if related_items %}
         <div class="node--type-product-related-products__nav-wrapper">
