--- a/source/themes/custom/crescenttool_au/styles/libraries/paragraph/full--featured-media--layout-full.scss
+++ b/source/themes/custom/crescenttool_au/styles/libraries/paragraph/full--featured-media--layout-full.scss
@@ -14,6 +14,9 @@
  * Component
  */
 .component-featured-media--layout-full {
+  margin-left: -2rem;
+  margin-right: -2rem;
+
   .component-featured-media__list {
     list-style: none;
     padding: 0;
@@ -26,13 +29,20 @@
   }
 
   .media--type-image {
-    @include media('<=sm') {
-      @include container-full-width();
+    img {
+      object-fit: cover;
+      width: 100%;
+      height: auto;
     }
   }
 
   video {
     height: 100%;
     width: 100%;
+  }
+
+  @media (min-width: 75em) {
+    margin-left: calc(-100vw / 2 + 75em / 2);
+    margin-right: calc(-100vw / 2 + 75em / 2);
   }
 }
