Updated content search card styling text link and hover color and text display to show on safari

--- a/source/themes/custom/sata/styles/libraries/node/search-index.scss
+++ b/source/themes/custom/sata/styles/libraries/node/search-index.scss
@@ -140,6 +140,10 @@
       font-weight: $fw-regular;
       line-height: rem(24px);
 
+      .field--type-text-with-summary {
+        display: inline;
+      }
+
       @include media('<md') {
         font-size: rem(12px);
         line-height: rem(20px);
