--- a/source/themes/custom/crescenttool_au/styles/libraries/node/search-index.scss
+++ b/source/themes/custom/crescenttool_au/styles/libraries/node/search-index.scss
@@ -28,6 +28,15 @@
   .node__content {
     height: 100%;
 
+    a {
+      text-decoration: none;
+      color: $black;
+
+      @include on-event() {
+        color: $black;
+      }
+    }
+
     .node__listing-image {
       @include flex();
       @include flex-x(align-items, center);
@@ -106,6 +115,10 @@
       -webkit-line-clamp: 5;
       -webkit-box-orient: vertical;
       overflow: hidden;
+
+      .field--type-text-with-summary {
+        display: inline;
+      }
     }
   }
 
