--- a/source/themes/custom/sata/styles/libraries/paragraph/full--content-driver-item.scss
+++ b/source/themes/custom/sata/styles/libraries/paragraph/full--content-driver-item.scss
@@ -135,7 +135,7 @@
             overflow: hidden;
             display: -webkit-box;
             -webkit-box-orient: vertical;
-            min-height: rem(100px);
+            min-height: rem(80px);
 
             @include media('<md') {
               font-size:  rem(16px);
@@ -153,6 +153,14 @@
           font-size: rem(16px);
           font-weight: $fw-regular;
           line-height: rem(24px);
+
+          .field--name-field-content {
+            display: inline;
+
+            p {
+              display: inline;
+            }
+          }
 
           @include media('<md') {
             font-size: rem(12px);
