--- a/source/themes/custom/crescenttool_au/styles/libraries/node/search-index.scss
+++ b/source/themes/custom/crescenttool_au/styles/libraries/node/search-index.scss
@@ -118,6 +118,10 @@
 
       .field--type-text-with-summary {
         display: inline;
+
+        p {
+          display: inline;
+        }
       }
     }
   }
