--- a/source/themes/custom/sata/styles/libraries/node/search-index.scss
+++ b/source/themes/custom/sata/styles/libraries/node/search-index.scss
@@ -142,6 +142,10 @@
 
       .field--type-text-with-summary {
         display: inline;
+
+        p {
+          display: inline;
+        }
       }
 
       @include media('<md') {
