--- a/source/themes/custom/gearwrench_au/styles/libraries/node/search-index.scss
+++ b/source/themes/custom/gearwrench_au/styles/libraries/node/search-index.scss
@@ -119,6 +119,10 @@
 
       .field--type-text-with-summary {
         display: inline;
+
+        p {
+          display: inline;
+        }
       }
     }
   }
