--- a/source/themes/custom/sata/styles/libraries/node/full--product.scss
+++ b/source/themes/custom/sata/styles/libraries/node/full--product.scss
@@ -671,10 +671,7 @@ $tabs-border-width-active: rem(5px);
 
   .product-detail-content-container__print > span {
     cursor: pointer;
-
-    @include on-event() {
-      color: $primary-emerald;
-    }
+    @include btn(print);
   }
 }
 
