feature/pdp-page-description_gw-ct: Displaying the product description on the PDP pages for GW and CT.

--- a/docroot/themes/custom/crescenttool_au/templates/node/node--product--full.html.twig
+++ b/docroot/themes/custom/crescenttool_au/templates/node/node--product--full.html.twig
@@ -158,11 +158,16 @@
           </div>
         </header>
 
-        <div class="product-detail-content-container__utility-container">
+        <div class="product-detail-content-container__utility-container"></div>
+
+        <div class="product-body">
+          {{ content.body }}
         </div>
 
         <h3>Features</h3>
+
         {{ page_top_products_features }}
+
         <span class="more-features-link"><a href="#features">See More Features</a> </span>
       </div>
     </div>
@@ -259,7 +264,7 @@
         {{ related_items }}
       {% endif %}
 
-      {{ content|without('field_long_description','field_product_images', 'field_product_features', 'field_product_specifications', 'field_media', 'field_set_components') }}
+      {{ content|without('field_long_description','field_product_images', 'field_product_features', 'field_product_specifications', 'field_media', 'field_set_components', 'body') }}
     </div>
   </div>
 </article>
