--- a/source/themes/custom/crescenttool/styles/libraries/node/teaser--product.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/node/teaser--product.scss
@@ -80,6 +80,7 @@
         .field--name-field-long-description {
           @include type-header(h4, black, included);
           margin-top: 0;
+          word-break: break-all;
 
           @include media('<md') {
             font-size:  rem(13px);
@@ -91,6 +92,10 @@
       .node__sku {
         font-size: rem(14px);
         margin: 0;
+
+        .field--name-title {
+          color: $white;
+        }
 
         @include media('<md') {
           font-size: rem(11px);
@@ -105,6 +110,7 @@
       display: inline-block !important;
       float: none;
       font-size: 1rem !important;
+      padding: 1rem 1.75rem .85rem !important;
       transition: $transition-base;
       width: 100%;
       border: 1px solid $primary-red;
@@ -128,17 +134,29 @@
         border-color: $gray-50;
 
         > small {
-          line-height: 1.625;
+          line-height: 1.2;
           font-weight: $fw-bold;
+          font-family: $font-brand;
+          display: inherit;
+
+          @include media('<=md') {
+            line-height: 1;
+          }
 
           &:hover {
             color: $white;
             font-weight: $fw-bold;
+
+            @include media('<=md') {
+              line-height: 1;
+            }
           }
         }
 
         &:hover {
           background-color: $gray-50;
+          border-top-left-radius: unset;
+          border-top-right-radius: unset;
         }
       }
 
@@ -168,6 +186,10 @@
 
       .node__sku {
         color: $white;
+
+        .field--name-title {
+          color: $white;
+        }
       }
     }
   }
