--- a/source/themes/custom/crescenttool/styles/libraries/node/teaser--product.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/node/teaser--product.scss
@@ -80,7 +80,7 @@
         .field--name-field-long-description {
           @include type-header(h4, black, included);
           margin-top: 0;
-          word-break: break-all;
+          word-break: break-word;
 
           @include media('<md') {
             font-size:  rem(13px);
@@ -94,7 +94,7 @@
         margin: 0;
 
         .field--name-title {
-          color: $white;
+          color: $type-dark;
         }
 
         @include media('<md') {
