--- a/source/themes/custom/sata/styles/libraries/node/teaser--product.scss
+++ b/source/themes/custom/sata/styles/libraries/node/teaser--product.scss
@@ -89,7 +89,7 @@
       .field--name-field-long-description {
         @include type-header(h4, light, included);
         margin-top: 0;
-        word-break: break-all;
+        word-break: break-word;
 
         @include media('<md') {
           font-size:  rem(16px);
