--- a/source/themes/custom/sata/styles/libraries/node/teaser--product.scss
+++ b/source/themes/custom/sata/styles/libraries/node/teaser--product.scss
@@ -120,7 +120,7 @@
     float: none;
     font-size: rem(16px) !important;
     line-height: rem(24px) !important;
-    padding: 1rem 1.75rem .85rem !important;
+    padding: 1rem 0.85rem 0.85rem !important;
     transition: $transition-base;
     white-space: inherit !important;
     width: 100%;
@@ -128,6 +128,7 @@
     @include media('<md') {
       white-space: normal;
       min-width: 100%;
+      padding: 1rem 0.3rem 0.85rem !important;
     }
 
     &.ps-disabled {
