--- a/source/themes/custom/gearwrench_au/styles/libraries/node/teaser--product.scss
+++ b/source/themes/custom/gearwrench_au/styles/libraries/node/teaser--product.scss
@@ -109,7 +109,7 @@
     display: inline-block !important;
     float: none;
     font-size: 1rem !important;
-    padding: 1rem 1.75rem .85rem !important;
+    padding: 1rem 0.85rem 0.85rem !important;
     transition: $transition-base;
     white-space: inherit !important;
     width: 100%;
@@ -117,6 +117,7 @@
     @include media('<md') {
       white-space: normal;
       min-width: 100%;
+      padding: 1rem 0.3rem 0.85rem !important;
     }
 
     &.ps-disabled {
