--- a/source/themes/custom/sata/styles/libraries/node/teaser--product.scss
+++ b/source/themes/custom/sata/styles/libraries/node/teaser--product.scss
@@ -90,6 +90,10 @@
         @include type-header(h4, light, included);
         margin-top: 0;
         word-break: break-word;
+        -webkit-line-clamp: 4;
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
 
         @include media('<md') {
           font-size:  rem(16px);
