SATA: removed underline from pager links, SATA GW: added line clamp to search product card results headings, SATA GW CT: removed full product category height added

--- a/source/themes/custom/sata/styles/libraries/node/search-index--product.scss
+++ b/source/themes/custom/sata/styles/libraries/node/search-index--product.scss
@@ -88,6 +88,11 @@
       .field--name-field-long-description {
         @include type-header(h4, light, included);
         margin-top: 0;
+        word-break: break-word;
+        -webkit-line-clamp: 4;
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
 
         @include media('<md') {
           font-size:  rem(16px);
