--- a/source/themes/custom/sata/styles/libraries/view/view.scss
+++ b/source/themes/custom/sata/styles/libraries/view/view.scss
@@ -25,6 +25,10 @@
     .pager__item {
       font-size: rem(14px);
 
+      a {
+        text-decoration: none;
+      }
+
       &.is-active {
         font-weight: $fw-regular;
 
