CT: Updated card sku color, GW SATA: updated search-index--product button styling

--- a/source/themes/custom/crescenttool/styles/abstracts/mixins/_cards.scss
+++ b/source/themes/custom/crescenttool/styles/abstracts/mixins/_cards.scss
@@ -127,6 +127,7 @@ $radius-desktop: rem(25px);
     .node__sku {
       font-size: rem(14px);
       margin: 0;
+      color: $type-dark;
 
       @include media('<md') {
         font-size: rem(12px);
