--- a/source/themes/custom/gearwrench_au/styles/libraries/node/search-index--product.scss
+++ b/source/themes/custom/gearwrench_au/styles/libraries/node/search-index--product.scss
@@ -93,6 +93,7 @@
     .node__sku {
       font-size: rem(14px);
       margin: 0;
+      color: $type-dark;
 
       @include media('<md') {
         font-size: rem(12px);
@@ -106,13 +107,15 @@
     box-sizing: border-box;
     display: inline-block !important;
     float: none;
-    font-size: 1rem !important;
+    font-size: rem(16px) !important;
     transition: $transition-base;
     width: 100%;
 
     @include media('<md') {
       white-space: normal;
       min-width: 100%;
+      font-size: rem(13px) !important;
+      padding: 1rem 0.3rem 0.85rem !important;
     }
 
     &.ps-disabled {
@@ -121,9 +124,19 @@
       > small {
         line-height: 1.625;
         font-weight: $fw-bold;
+        font-family: $font-brand;
+        font-size: rem(16px);
+        display: inherit;
+
+        @include media('<md') {
+          line-height: 1;
+          font-size: rem(13px) !important;
+        }
 
         &:hover {
           font-weight: $fw-bold;
+          font-family: $font-brand;
+          font-size: rem(16px);
         }
       }
     }
@@ -132,9 +145,16 @@
       color: $primary-orange;
       background-color: $black;
 
-      &.ps-disabled > small {
-        line-height: 1.625;
-        font-weight: $fw-bold;
+      &.ps-disabled {
+        background-color: $gray-50;
+
+        > small {
+          line-height: 1.625;
+          font-weight: $fw-bold;
+          font-family: $font-brand;
+          font-size: rem(16px);
+          display: inherit;
+        }
       }
     }
   }
