--- a/source/themes/custom/sata/styles/libraries/node/teaser--product.scss
+++ b/source/themes/custom/sata/styles/libraries/node/teaser--product.scss
@@ -15,7 +15,10 @@
  */
 .node--type-product.node--view-mode-teaser {
   width: 25%;
-  box-shadow: 0 0 16px 5px rgba(0, 0, 0, 0.2);
+
+  @include media('>=md') {
+    box-shadow: 0 0 16px 5px rgba(0, 0, 0, 0.2);
+  }
 
   .node__content {
     border-top: 1px solid transparent;
@@ -132,6 +135,7 @@
     @include media('<md') {
       white-space: normal;
       min-width: 100%;
+      font-size: rem(13px) !important;
       padding: 1rem 0.3rem 0.85rem !important;
     }
 
@@ -146,12 +150,13 @@
         font-size: rem(16px);
         display: inherit;
 
-        @include media('<=md') {
+        @include media('<md') {
           line-height: 1;
+          font-size: rem(13px) !important;
         }
       }
 
-      &:hover {
+      @include on-event() {
         background-color: $gray-50;
 
         > small {
@@ -167,25 +172,30 @@
       }
     }
 
-    &:hover {
+    @include on-event() {
       color: $type-dark;
       font-weight: $fw-extra-bold;
-      border-left-color: transparent !important;
-      border-right-color: transparent !important;
-      border-bottom-color: transparent !important;
+
+      @include media('>=md') {
+        border-left-color: transparent !important;
+        border-right-color: transparent !important;
+        border-bottom-color: transparent !important;
+      }
 
       &.ps-disabled {
         background-color: $gray-50;
         border-color: $gray-50 !important;
 
-        & > small {
+        > small {
           line-height: rem(24px);
           font-weight: $fw-extra-bold;
           font-family: $font-brand;
           font-size: rem(16px);
+          display: inherit;
 
-          @include media('<=md') {
+          @include media('<md') {
             line-height: 1;
+            font-size: rem(13px) !important;
           }
         }
       }
