removed print button from product print styles

--- a/source/themes/custom/sata/styles/libraries/node/full--product-print.scss
+++ b/source/themes/custom/sata/styles/libraries/node/full--product-print.scss
@@ -29,6 +29,7 @@
   .page .is-b-loading:not([data-animation])::before,
   .product-detail-slider__thumbs-outer-wrapper,
   .product-detail-content-container__rating-container,
+  .product-detail-content-container__print,
   .product-detail-content-container__social,
   .product-detail-content-container h3,
   .product-detail-content-container .field--name-field-product-features,
