Updated product category media class to immediate child, unset border radius for tile grid button

--- a/source/themes/custom/sata/styles/libraries/node/full--product-category.scss
+++ b/source/themes/custom/sata/styles/libraries/node/full--product-category.scss
@@ -52,7 +52,7 @@
     }
   }
 
-  .field--name-field-media {
+  & > .field--name-field-media {
     @include container-full-width();
     margin-bottom: 3rem;
 
