--- a/source/themes/custom/sata/styles/libraries/node/tile.scss
+++ b/source/themes/custom/sata/styles/libraries/node/tile.scss
@@ -36,6 +36,7 @@
     width: 100%;
     background-color: $primary-emerald;
     padding: 1rem .85rem .85rem;
+    border-radius: unset !important;
     white-space: normal;
 
     @include media('>=md') {
