--- a/source/themes/custom/gearwrench_au/styles/libraries/region/footer.scss
+++ b/source/themes/custom/gearwrench_au/styles/libraries/region/footer.scss
@@ -157,6 +157,17 @@ $footer-bp-mobile: '<sm';
     @include container($margin: 0);
     color: $black;
 
+    a {
+      @include link(dark, hover);
+
+      &:hover,
+      &:focus,
+      &:active,
+      &.is-active {
+        color: $type-dark;
+      }
+    }
+
     .region-footer-second__content {
       .block-webform-block__title {
         border-bottom: unset;
