Updated GW & CT region footer secondary link styling

--- a/source/themes/custom/crescenttool/styles/libraries/region/footer.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/region/footer.scss
@@ -178,6 +178,7 @@ $footer-bp-mobile: '<sm';
 
     a {
       @include link(light, hover);
+      text-decoration: underline;
     }
 
     .region-footer-second__content {
