Added product body styling to GW CT

--- a/source/themes/custom/gearwrench_au/styles/libraries/node/full--product.scss
+++ b/source/themes/custom/gearwrench_au/styles/libraries/node/full--product.scss
@@ -176,6 +176,14 @@ $tabs-border-width-active: rem(5px);
       }
     }
 
+    .product-body {
+      margin: (26px 0 16px);
+
+      @include media('>=sm') {
+        margin: (45px 0 0);
+      }
+    }
+
     .field--name-field-product-features {
       display: none;
 
