Added max width to content callout content container for larger breakpoint

--- a/source/themes/custom/sata/styles/libraries/paragraph/full--content-callout.scss
+++ b/source/themes/custom/sata/styles/libraries/paragraph/full--content-callout.scss
@@ -113,6 +113,10 @@
         z-index: 5;
       }
 
+      @include media('>=2300px') {
+        max-width: rem(550px);
+      }
+
       @include media('<lg-plus') {
         padding: rem(10px 0 50px);
         max-width: rem(450px);
