--- a/docroot/themes/custom/sata/templates/node/node--tile.html.twig
+++ b/docroot/themes/custom/sata/templates/node/node--tile.html.twig
@@ -77,7 +77,7 @@
         <div{{ media_attributes }}>
           {{ content }}
         </div>
-        <div class="btn node__grid-title">
+        <div class="node__grid-title">
           {{ label }}
         </div>
       </a>
