--- a/source/themes/custom/sata/styles/libraries/node/tile.scss
+++ b/source/themes/custom/sata/styles/libraries/node/tile.scss
@@ -16,6 +16,20 @@
 
 .node--view-mode-tile {
   border: 3px solid $primary-emerald;
+  height: 100%;
+
+  .node__inner,
+  .node__content {
+    height: 100%;
+  }
+
+  .node__content {
+    background-color: $primary-emerald;
+
+    a {
+      text-decoration: none;
+    }
+  }
 
   .node__grid-image .field--name-field-media .media {
     picture {
@@ -32,16 +46,36 @@
   }
 
   .node__grid-title {
+    position: relative;
     font-size: rem(16px);
+    color: $white;
+    font-family: $font-brand;
+    font-weight: $fw-extra-bold;
+    letter-spacing: 0.03rem;
+    text-align: center;
+    text-transform: uppercase;
+    line-height: 1 ;
     width: 100%;
-    background-color: $primary-emerald;
+    // height: 37%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     padding: 1rem .85rem .85rem;
-    border-radius: unset !important;
-    white-space: normal;
+    transition: $transition-base;
+
+    //.field--name-title {
+    //  position: absolute;
+    //  top: 50%;
+    //  left: 0;
+    //  right: 0;
+    //  transform: translateY(-50%);
+    //}
 
     @include media('>=md') {
       font-size: rem(20px);
-      padding: 1rem .75rem .85rem;
+      padding: 1rem 1.1rem .85rem;
+      line-height: 1.625 !important;
+      // height: 26%;
     }
 
   }
@@ -73,7 +107,7 @@
 
         &::after {
           font-size: rem(17px);
-          padding-left: rem(2px);
+          padding-left: rem(5px);
         }
       }
     }
