--- a/source/themes/custom/sata/styles/libraries/view/product-category-grid.scss
+++ b/source/themes/custom/sata/styles/libraries/view/product-category-grid.scss
@@ -18,6 +18,7 @@
   .view-content {
     display: grid;
     grid-template-columns: repeat(2, minmax(0, 1fr));
+    grid-auto-rows: 1fr;
     gap: rem(25px); // sass-lint:disable-line no-misspelled-properties
 
     @include media('>=md') {
