Added CT AU & GW US & AU top message cta bar js and css, Updated product sticky nav css values to variables, fixed sata theme conditional, SATA fixed mobile menu link hover color

--- a/source/themes/custom/crescenttool/styles/libraries/paragraph/full--top-message-cta-bar.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/paragraph/full--top-message-cta-bar.scss
@@ -79,7 +79,7 @@
 
         color: $white;
         font-size: 1.25rem;
-        font-weight: 800;
+        font-weight: $fw-extra-bold;
         text-transform: uppercase;
 
         @media (max-width: 767px) {
@@ -112,7 +112,7 @@
 
           p {
             color: $white;
-            font-weight: 800;
+            font-weight: $fw-extra-bold;
           }
 
           &.sku--desktop {
