--- a/source/themes/custom/crescenttool/styles/libraries/block/product-buy-now-sticky.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/block/product-buy-now-sticky.scss
@@ -74,7 +74,7 @@
 
         color: $white;
         font-size: 1.25rem;
-        font-weight: 800;
+        font-weight: $fw-extra-bold;
         text-transform: uppercase;
 
         @media (max-width: 767px) {
@@ -107,7 +107,7 @@
 
           p {
             color: $white;
-            font-weight: 800;
+            font-weight: $fw-extra-bold;
           }
 
           &.sku--desktop {
