--- a/source/themes/custom/crescenttool_au/styles/libraries/paragraph/full--top-message-cta-bar.scss
+++ b/source/themes/custom/crescenttool_au/styles/libraries/paragraph/full--top-message-cta-bar.scss
@@ -1,10 +1,10 @@
 // -----------------------------------------------------------------------------
-// Block: Product: Buy Now Sticky
+// Paragraph: Top Message CTA BAR
 // -----------------------------------------------------------------------------
 
 @import '../../globals';
 
-.block-product-buy-now-sticky__content {
+.component-top-message-cta-bar__content {
   @include container-full-width();
 
   position: fixed;
@@ -39,9 +39,9 @@
   &.show--with-nav {
     top: 5.8rem;
 
-    @media (min-width: 595px) and (max-width: 1154px) {
+    @media (min-width: 976px) and (max-width: 1154px) {
       .user-logged-in & {
-        top: 8.5rem;
+        top: 11rem;
       }
     }
 
@@ -51,17 +51,17 @@
       }
 
       .user-logged-in.toolbar-tray-open & {
-        top: 11rem;
+        top: 10.7rem;
       }
     }
   }
 
-  .block--gw-product-buy-now-sticky {
+  .component-top-message-cta-bar__wrapper {
     background-color: $black;
     margin-top: -1.8rem;
     padding: 1rem 0;
 
-    .block--gw-product-buy-now-sticky__inner-wrapper {
+    .component-top-message-cta-bar__inner-wrapper {
       @include container();
       @include flex();
       @include flex-x(flex-direction, row);
@@ -69,7 +69,11 @@
       align-items: center;
       justify-content: space-between;
 
-      header {
+      .title {
+        padding-right: rem(10px);
+      }
+
+      header .field--name-field-top-message-cta-bar-title {
         @include setfont();
 
         color: $white;
@@ -107,7 +111,7 @@
 
           p {
             color: $white;
-            font-weight: 800;
+            font-weight: $fw-extra-bold;
           }
 
           &.sku--desktop {
@@ -119,23 +123,41 @@
           }
         }
 
-        .ps-widget {
+        .node__buy-now-button {
           @include btn(primary);
 
-          border: 2px solid $primary-orange !important;
+          border: 2px solid $primary-red !important;
           float: unset;
+
+          a {
+            color: $white;
+            font-family: $font-brand;
+            text-decoration: none;
+            font-size: rem(16px);
+          }
 
           &:hover {
             cursor: pointer;
           }
 
-          @media (max-width: 767px) {
+          @include media ('<md') {
             min-width: 120px;
-            padding-left: 0;
-            padding-right: 0;
+            padding-left: rem(15px);
+            padding-right: rem(15px);
+
+            a {
+              font-size: rem(14px);
+            }
           }
         }
       }
     }
+  }
+}
+
+// For logged in-specific styling differences
+.user-logged-in .component-top-message-cta-bar__content {
+  .block--ct-product-buy-now-sticky {
+    margin-top: -2.8rem;
   }
 }
