--- a/source/themes/custom/sata/styles/libraries/paragraph/full--top-message-cta-bar.scss
+++ b/source/themes/custom/sata/styles/libraries/paragraph/full--top-message-cta-bar.scss
@@ -141,9 +141,9 @@
         @include setfont();
 
         font-family: $font-brand;
-        color: #FFFFFF;
+        color: $white;
         font-size: rem(16px);
-        font-weight: 800;
+        font-weight: $fw-extra-bold;
         text-transform: uppercase;
 
         @include media('>=md') {
@@ -177,7 +177,7 @@
 
           p {
             color: $white;
-            font-weight: 800;
+            font-weight: $fw-extra-bold;
             font-family: $font-brand;
           }
 
