SATA: Changed print region footer to display none

--- a/source/themes/custom/sata/styles/libraries/node/full--product-print.scss
+++ b/source/themes/custom/sata/styles/libraries/node/full--product-print.scss
@@ -41,6 +41,7 @@
   .more-features-link,
   .node--type-product-related-products__nav-wrapper,
   .views-element-container,
+  .region-footer,
   .region-footer-second,
   .block-footer-navigation-block__header,
   .block-footer-navigation-block__footer-social-menu-wrapper,
